tests/error/protocol_errors/statements.err
Error: Unexpected statement (at $FILE:7:4)
  | 
5 | class MyProto:
6 | 
7 |     var = 42
  |     ^^^^^^^^ Unexpected statement in protocol definition

Guppy compilation failed due to 1 previous error
